--- a/type.html
+++ b/type.html
@@ -12,7 +12,7 @@
     <!--- use font-awesome css --->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!--- use custom css --->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="loginstyle.css">
 
    
 </head>
