--- a/index.html
+++ b/index.html
@@ -297,6 +297,14 @@
             <h2>sarweshkhairnar@gmail.com</h2>
           </div>
         </div>
+        <div class="contact-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
+          <div class="contact-info">
+            <h1>Email</h1>
+            <h2>vansh0336@gmail.com</h2>
+            <h2>sarweshkhairnar@gmail.com</h2>
+          </div>
+        </div>
        
       </div>
     </div>
