--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           </div>
         </div>
         <div class="contact-item">
-          <div class="icon"><img src="img/icon.png" /></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
           <div class="contact-info">
             <h1>Email</h1>
             <h2>vansh0336@gmail.com</h2>
@@ -298,7 +298,7 @@
           </div>
         </div>
         <div class="contact-item">
-          <div class="icon"><img src="<img src="/"/>" /></div>
+          <div class="icon"><img src="<img src="img/icon.png"/>" /></div>
           <div class="contact-info">
             <h1>APK</h1>
             <a href="https://drive.google.com/file/d/1iy37nV55c9blj-eNr34p9lU5o315_m4M/view?usp=sharing" class="badge badge-danger">Danger</a>
