--- a/index.html
+++ b/index.html
@@ -298,10 +298,10 @@
           </div>
         </div>
         <div class="contact-item">
-          <div class="icon"><img src="<img src="img/icon.png"/>" /></div>
+          <div class="icon"><img src="img/icon.png" /></div>
           <div class="contact-info">
             <h1>APK</h1>
-            <a href="https://drive.google.com/file/d/1iy37nV55c9blj-eNr34p9lU5o315_m4M/view?usp=sharing" class="badge badge-danger">Danger</a>
+            <a href="https://drive.google.com/file/d/1iy37nV55c9blj-eNr34p9lU5o315_m4M/view?usp=sharing" class="badge badge-danger">Click Here</a>
           </div>
         </div>
        
