--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
           <div class="icon"><img src="img/icon.png" /></div>
           <div class="contact-info">
             <h1>APK</h1>
-            <a href="https://drive.google.com/file/d/1iy37nV55c9blj-eNr34p9lU5o315_m4M/view?usp=sharing" class="badge badge-danger">Click Here</a>
+            <a href="https://drive.google.com/file/d/1iy37nV55c9blj-eNr34p9lU5o315_m4M/view?usp=sharing" class="badge badge-danger" style="background-color:crimson">Click Here</a>
           </div>
         </div>
        
