--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="services con">
       <div class="service-top">
         <h1 class="section-title">Found a phishing site<span>?</span></h1>
-        <p> <span>Ensure that if website have "www." Then it should be entered like that. If not, may lead to false results.</span> </p>
+        <p style="text-align: center;"><span style="color: crimson;">Note:</span>Paste URL below. If manually entering the URL please make sure it is exactly same as actual URL. Else, may lead to false results.</p>
       </div>
       <div>
         <div class="search">
