--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="card.css">
   
-  <title>My Website</title>
+  <title>Phish-Shield</title>
 </head>
 
 <body>
