--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="card.css">
-  
+  <link href="img/icon.png" rel="icon">
+   <link href="img/icon.png" rel="apple-touch-icon">
   <title>Phish-Shield</title>
 </head>
 
